--- a/FoodPantry.html
+++ b/FoodPantry.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="/images/UMSI_signature_vertical_informal_solidblue.jpg" type="image/jpg">
     <title>Food Pantry at UMSI</title>
