--- a/AcademicAdvisingSupport.html
+++ b/AcademicAdvisingSupport.html
@@ -16,7 +16,7 @@
         <!-- <img src="/images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo"> -->
         <nav>
             <ul>
-                <li><a href="HomePage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="AcademicAdvisingSupport.html">Academic Advising Support</a></li>
                 <li><a href="FoodPantry.html">Food Pantry</a></li>
                 <li><a href="CEW+.html">CEW+</a></li>
