--- a/CEW+.html
+++ b/CEW+.html
@@ -16,7 +16,7 @@
         <!-- <img src="/images/Page3_1.png" alt="The big picture of cew+" style="width:1000px; height:auto;"> -->
         <nav>
             <ul>
-                <li><a href="HomePage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="AcademicAdvisingSupport.html">Academic Advising Support</a></li>
                 <li><a href="FoodPantry.html">Food Pantry</a></li>
                 <li><a href="CEW+.html">CEW+</a></li>
