--- a/FoodPantry.html
+++ b/FoodPantry.html
@@ -16,7 +16,7 @@
         <!-- <img src="/images/Page2_2.png" alt="food provided at MAIZE&BLUE CUPBOARD" style="width:640px; height:360px;"> -->
         <nav>
             <ul>
-                <li><a href="HomePage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="AcademicAdvisingSupport.html">Academic Advising Support</a></li>
                 <li><a href="FoodPantry.html">Food Pantry</a></li>
                 <li><a href="CEW+.html">CEW+</a></li>
