--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="HomePage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="AcademicAdvisingSupport.html">Academic Advising Support</a></li>
                 <li><a href="FoodPantry.html">Food Pantry</a></li>
                 <li><a href="CEW+.html">CEW+</a></li>
