--- a/CEW+.html
+++ b/CEW+.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="/images/UMSI_signature_vertical_informal_solidblue.jpg" type="image/jpg">
+    <link rel="icon" href="images/UMSI_signature_vertical_informal_solidblue.jpg" type="image/jpg">
     <title>CEW+</title>
 </head>
 
@@ -40,7 +40,7 @@
                 CEW+, and we're here to help you reach your potential.
             </p>
             <figure>
-                <img src="/images/Page3_LOGO.png" alt="The logo of cew+" style="width:500px; height:auto;">
+                <img src="images/Page3_LOGO.png" alt="The logo of cew+" style="width:500px; height:auto;">
             </figure>
 
             <h2>Our History</h2>
@@ -78,7 +78,7 @@
         <section>
             <h3>Opening Time</h3>
             <figure>
-                <img src="/images/Page3_2.png" alt="opening hours and the basic infrastracture of cew+" style="width:800px; height:auto;">
+                <img src="images/Page3_2.png" alt="opening hours and the basic infrastracture of cew+" style="width:800px; height:auto;">
             </figure>
 
         </section>
