--- a/FoodPantry.html
+++ b/FoodPantry.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="/images/UMSI_signature_vertical_informal_solidblue.jpg" type="image/jpg">
+    <link rel="icon" href="images/UMSI_signature_vertical_informal_solidblue.jpg" type="image/jpg">
     <title>Food Pantry at UMSI</title>
 </head>
 
@@ -45,7 +45,7 @@
                     the
                     skills to make informed decisions. </p>
                 <figure>
-                    <img src="/images/Page2_1.jpg" alt="student picking fruit offered by the Maize and Blue
+                    <img src="images/Page2_1.jpg" alt="student picking fruit offered by the Maize and Blue
                 Cupboard " style="width:500px; height:auto;">
                 </figure>
 
@@ -73,7 +73,7 @@
                     North Campus residents.
                 </p>
                 <figure>
-                    <img src="/images/Page2_news.png"
+                    <img src="images/Page2_news.png"
                         alt="food about news that Fall 2024 Mobile Distribution for North Campus "
                         style="width:300px; height:auto;">
                 </figure>
@@ -90,7 +90,7 @@
                     We suggest participants bring a reusable bag or another method to carry groceries.
                 </p>
                 <figure>
-                    <img src="/images/Page2_4.png"
+                    <img src="images/Page2_4.png"
                         alt="food about news that Mobile Distribution for North Campus — Fall 2023 Semester"
                         style="width:300px; height:auto;">
                 </figure>
