--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="/images/UMSI_signature_vertical_informal_solidblue.jpg" type="image/jpg">
+    <link rel="icon" href="images/UMSI_signature_vertical_informal_solidblue.jpg" type="image/jpg">
     <title>Student Success Portal</title>
 </head>
 
@@ -47,7 +47,7 @@
             <article>
                 <h3>University Health Service (UHS)</h3>
                 <figure>
-                    <img src="/images/UHS.jpg" alt="University Health Services building">   
+                    <img src="images/UHS.jpg" alt="University Health Services building">   
                 </figure>
                 <p>University Health Service (UHS): Access comprehensive medical care, including routine check-ups,
                     vaccinations, and specialist referrals.</p>
@@ -55,7 +55,7 @@
             <article>
                 <h3>Recreational Sports</h3>
                 <figure>
-                    <img src="/images/UMSI_CampusFall_UMSIBackpack_02.jpg"
+                    <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg"
                         alt="A student wears a UMSI backpack in fall on the drag.">
                 </figure>
                 <p>Participate in various fitness programs, sports clubs, and use of gym facilities to stay active and
