--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <article>
                 <h3>University Health Service (UHS)</h3>
                 <figure>
-                    <img src="images/UHS.jpg" alt="University Health Services building">   
+                    <img src="images/UHS.jpg" alt="University Health Services building" style="width:700px; height:auto;">   
                 </figure>
                 <p>University Health Service (UHS): Access comprehensive medical care, including routine check-ups,
                     vaccinations, and specialist referrals.</p>
@@ -56,7 +56,7 @@
                 <h3>Recreational Sports</h3>
                 <figure>
                     <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg"
-                        alt="A student wears a UMSI backpack in fall on the drag.">
+                        alt="A student wears a UMSI backpack in fall on the drag." style="width:700px; height:auto;">
                 </figure>
                 <p>Participate in various fitness programs, sports clubs, and use of gym facilities to stay active and
                     healthy.</p>
@@ -129,8 +129,7 @@
     
             <div class="footer-section contact">
                 <h3>Contact Us</h3>
-                <p> School of Information </br>
-                    University of Michigan
+                <p> School of Information, University of Michigan
                     </p>
                 <p>105 S State St.
                     Ann Arbor, MI 48109-1285</p>
