--- a/AcademicAdvisingSupport.html
+++ b/AcademicAdvisingSupport.html
@@ -16,8 +16,8 @@
         <!-- <img src="/images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo"> -->
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="AcademicAdvisingSupport.html">Academic Advising Support</a></li>
+                <li><a href="HomePage.html">Home</a></li>
+                <li><a href="AcademicAdvisingSupport.html" class="current">Academic Advising Support</a></li>
                 <li><a href="FoodPantry.html">Food Pantry</a></li>
                 <li><a href="CEW+.html">CEW+</a></li>
             </ul>
@@ -58,7 +58,7 @@
         </div>
 
         <div>
-            <h3>How can your Academic Advisor help you?</h3>
+            <h2>How can your Academic Advisor help you?</h2>
             <img src="images/UMSI_JesseJohnstonClass_02.jpg" alt="some studetns in the classroom with the professor"
                 style="width:700px; height:auto;">
             <ul>
@@ -71,8 +71,8 @@
         </div>
 
         <div>
-            <h3>What type of appointment should I book?</h3>
-            <h4>Scheduled 1:1 Appointments</h4>
+            <h2>What type of appointment should I book?</h2>
+            <h3>Scheduled 1:1 Appointments</h3>
             <p>Scheduled 1:1 appointments are for students who need extended time with an advisor to answer more complex
                 questions and situations. Appointments are available in 30-minute increments and can be booked through
                 <a href="https://si-umich.navigate.eab.com/app/#/authentication/remote/">Navigate360</a>.
@@ -85,9 +85,7 @@
                 <li> Resources available at UMSI and UM</li>
                 <li>Concerns related to academic progress</li>
             </ul>
-        </div>
-        <div>
-            <h4>Drop-In 1:1 Appointments</h4>
+            <h3>Drop-In 1:1 Appointments</h3>
             <p>Utilizing the <a href="https://officehours.it.umich.edu/queue/1001/">office hours tool</a> drop-in 1:1
                 appointments are an opportunity to meet 1:1 with an academic advisor in a drop-in format. Students
                 needing 10 minutes or less to discuss an academic concern should consider attending a drop-in session.
@@ -132,10 +130,12 @@
             
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 University of Michigan. All rights reserved.</p>
+            <p>&copy; <span id="current-year"></span> University of Michigan. All rights reserved.</p>
         </div>
     </footer>
-
+    <script>
+        document.getElementById("current-year").textContent = new Date().getFullYear();
+    </script>
 </body>
 
 </html>
