--- a/FoodPantry.html
+++ b/FoodPantry.html
@@ -16,18 +16,17 @@
         <!-- <img src="/images/Page2_2.png" alt="food provided at MAIZE&BLUE CUPBOARD" style="width:640px; height:360px;"> -->
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="HomePage.html">Home</a></li>
                 <li><a href="AcademicAdvisingSupport.html">Academic Advising Support</a></li>
-                <li><a href="FoodPantry.html">Food Pantry</a></li>
+                <li><a href="FoodPantry.html" class="current">Food Pantry</a></li>
                 <li><a href="CEW+.html">CEW+</a></li>
             </ul>
         </nav>
         <h1>Food Pantry at UMSI</h1>
     </header>
     <main id="main">
-        <section>
-            <h2> WELCOME TO MAIZE&BLUE CUPBOARD! </h2>
-            <h3>OUR MISSION: </h3>
+        <div>
+            <h2>OUR MISSION </h2>
             <p> To ensure members of the University of Michigan community—whether on a tight budget or physically
                 restrained from getting to a grocery store—receive equitable access to healthy, nutritious, and
                 nourishing food and the ability to prepare it for themselves or others.</p>
@@ -35,8 +34,9 @@
                 <img src="images/Page2_3.png" alt="food provided at MAIZE&BLUE CUPBOARD"
                     style="width:500px; height:auto;">
             </figure>
-            <section>
-                <h3>WHO WE ARE: </h3>
+        </div>
+        <div>
+                <h2>WHO WE ARE</h2>
                 <p> College students and staff are experiencing food insecurity at alarming rates. The Maize and
                     Blue
                     Cupboard is here to provide an immediate and comprehensive response for the U-M community. By
@@ -48,8 +48,9 @@
                     <img src="images/Page2_1.jpg" alt="student picking fruit offered by the Maize and Blue
                 Cupboard " style="width:500px; height:auto;">
                 </figure>
-
-                <h3>WHAT WE PROVIDE:</h3>
+        </div>
+        <div>
+                <h2>WHAT WE PROVIDE</h2>
                 <ul>
                     <li><strong>FOOD:</strong> Produce, dairy, meat, bread, frozen and shelf-stable foods (i.e.
                         rice, cans, tuna, etc.)</li>
@@ -60,35 +61,13 @@
                     <li><strong>SUPPORT:</strong> Get connected to campus experts like CAPS, Dean of Students and
                         Financial Aid, as well as SNAP (Michigan's food program)</li>
                 </ul>
-            </section>
+         </div>
 
             <section>
                 <h2> NEWS </h2>
-                <h3> Fall 2024 Mobile Distribution for North Campus </h3>
-                <p>
-                    U-M's Maize & Blue Cupboard (MBC), the College of Engineering, Student Life, and Ann Arbor-based
-                    Food
-                    Gatherers will host North Campus mobile food distributions to make MBC resources more accessible
-                    for
-                    North Campus residents.
-                </p>
-                <figure>
-                    <img src="images/Page2_news.png"
-                        alt="food about news that Fall 2024 Mobile Distribution for North Campus "
-                        style="width:300px; height:auto;">
-                </figure>
-
                 <h3>
                     Fall 2023 Mobile Distribution for North Campus 
                 </h3>
-                <p>
-                    U-M's Maize & Blue Cupboard (MBC), the College of Engineering, Student Life, and Ann Arbor-based
-                    Food Gatherers will host North Campus mobile food distributions to make MBC resources more
-                    accessible for North Campus residents. The mobile distribution takes place in the connector
-                    hallway between the Duderstadt Media Library and Pierpont Commons.
-
-                    We suggest participants bring a reusable bag or another method to carry groceries.
-                </p>
                 <figure>
                     <img src="images/Page2_4.png"
                         alt="food about news that Mobile Distribution for North Campus — Fall 2023 Semester"
@@ -96,7 +75,7 @@
                 </figure>
                 <p>
                     The North Campus mobile food distributions will take place during the following dates. No
-                    reservation is required. Food will be distributed from 2pm to 4pm or until supplies run out.</p>
+                    reservation is required. Food will be distributed from 2pm to 4pm or until supplies run out:</p>
                 <ul>
                     <li>Wednesday, October 18</li>
                     <li>Wednesday, November 1</li>
@@ -104,9 +83,6 @@
                     <li> Wednesday, November 29</li>
                     <li>Wednesday, December 13</li>
                 </ul>
-                <p>The initial idea for the North Campus Distribution pilot originated through the COVID Campus
-                    Challenge, sponsored by the College of Engineering and Student Life. Students were charged with
-                    developing resource ideas to support students during the pandemic. </p>
 
                 <p>Want to help out? Maize and Blue Cupboard needs volunteers and donations. Read more about <a
                         href="https://mbc.studentlife.umich.edu/how-to-help/">how to
@@ -146,10 +122,12 @@
             
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 University of Michigan. All rights reserved.</p>
+            <p>&copy; <span id="current-year"></span> University of Michigan. All rights reserved.</p>
         </div>
     </footer>
-
+    <script>
+        document.getElementById("current-year").textContent = new Date().getFullYear();
+    </script>
 </body>
 
 </html>
